--- a/sentence2vec/method-1/Sentence2Vec.ipynb
+++ b/sentence2vec/method-1/Sentence2Vec.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 词：每一个词有一个对应的向量"
+    "## 词：每一个词有一个对应的向量，可以使用GloVe/PSL/Word2Vec等得方法得到词向量"
    ]
   },
   {
